2003-02-22  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-21  James Willcox  <jwillcox@gnome.org>

	* Makefile.am:
	* configure.in:
	* po/POTFILES.in:

	Clean up the build and enable buildling the plugins again.

2003-02-20  James Willcox  <jwillcox@gnome.org>

	* Makefile.am:
	* configure.in:
	* gedit-2.3.pc.in:
	* gedit/Makefile.am:
	* gedit/gedit-mdi-child.h:
	* gedit/gedit-mdi.h:
	* gedit/recent-files/Makefile.am:
	* plugins/Makefile.am:

	Install headers and stuff so we can build plugins externally.

2003-02-20  James Willcox  <jwillcox@gnome.org>

	* configure.in:
	* gedit/dialogs/Makefile.am:
	* plugins/*:

	It actually builds now (sigh)

2003-02-20  James Willcox  <jwillcox@gnome.org>

	* Makefile.am:
	* configure.in:
	* src/: removed

	Copied src/ to gedit/ to prepare for external plugins, and fixed the
	build accordingly.

2003-02-09  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "kn" to ALL_LINGUAS.

2003-01-27  James Willcox  <jwillcox@gnome.org>

	* configure.in:
	* message-of-doom:

	Restore message-of-doom (HEAD is for 2.4 now)

2003-01-27  Paolo Maggi <paolo.maggi@polito.it>

	* configure.in: bump version to 2.2.0,
	updated requirement, don't display message-of-doom

	* README: bump version to 2.2.0

	* NEW: updated

2003-01-24  Breda McColgan <Breda.McColgan@sun.com>

        * help/C/gedit.xml: corrected DTD reference

2003-01-24  Breda McColgan <Breda.McColgan@sun.com>

        * help/C/gedit.xml: updated for GNOME 2.2
        * help/C/gedit-C.omf: updated manual date
          and version number
        * help/C/figures/gedit_window.png: updated screenshot
          of the latest application

2003-01-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-21  Paolo Maggi <paolo.maggi@polito.it>

	* configure.in:
	* README: bump version to 2.1.91
	
	* NEWS: updated

2003-01-14  Paolo Maggi <paolo.maggi@polito.it>

	* TRANSLATABLE_FILES: