@@ -2,9 +2,6 @@
 
 SUBDIRS = gedit pixmaps po help data plugins
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = gedit-@GEDIT_MAJOR@.pc
-
 EXTRA_DIST = BUGS		\
 	ChangeLog  		\
 	message-of-doom		\
@@ -13,5 +10,4 @@ EXTRA_DIST = BUGS		\
 	xmldocs.make 		\
 	intltool-extract.in 	\
 	intltool-merge.in 	\
-	intltool-update.in 	\
-	gedit-@GEDIT_MAJOR@.pc.in
+	intltool-update.in
