@@ -6,7 +6,7 @@ AC_INIT(gedit, 2.3.0, http://bugzilla.gnome.org/enter_bug.cgi?product=gedit)
 AC_CONFIG_SRCDIR(gedit/gedit2.c)
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
-GEDIT_MAJOR=2.3
+GEDIT_MAJOR=2.4
 AC_SUBST(GEDIT_MAJOR)
 
 AM_MAINTAINER_MODE
@@ -194,7 +194,7 @@ AC_SUBST(PLUGIN_LIBTOOL_FLAGS)
 
 AC_OUTPUT([
 Makefile
-gedit-2.3.pc
+data/gedit.pc
 data/Makefile
 po/Makefile.in
 gedit/Makefile
