@@ -1,3 +1,13 @@
+2003-02-24  James Willcox  <jwillcox@gnome.org>
+
+	* Makefile.am:
+	* configure.in:  
+	* data/Makefile.am:
+	* data/gedit.pc.in:  Moved from toplevel
+	* gedit/Makefile.am:
+
+	Passes distcheck now.
+
 2003-02-22  Roozbeh Pournader  <roozbeh@sharif.edu>
 
 	* configure.in: Added "fa" to ALL_LINGUAS.
